# libaleominer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  build_1650.sh  build_3080.sh  build_4070.sh  build_4090.sh  build_all_cuda_arch.sh  comp_circuit.py  comp_circuit_psd2.py  run2.sh
program_bin/: program-only-eq.h  program-test-21827.h  program-test-40447.h  program-test-40448.h  program-test-40449.h  program-test-40961.aleo  program-test-6xxxx.h  program-test-93w.h  program-test-only-head.h  program-test-origin.h  test-21827.aleo  test-40447.aleo  test-40448.aleo  test-40449.aleo  test-40457.aleo  test-6xxxx.aleo  test-93w.aleo  test-mul.aleo  test-mul.h  test-only-eq.aleo  test-only-head.aleo  test-origin.aleo
program_test/: CMakeLists.txt  test_bhp256.cpp  test_bhp256.cu  test_curve.cpp  test_curve.cu  test_field_to_bigint_with_witeness.cpp  test_field_to_bigint_with_witeness.cu  test_helper.cuh  test_inverse.cpp  test_inverse.cu  test_keccak.cpp  test_keccak.cu  test_ped64.cpp  test_ped64.cu  test_poww.cpp  test_poww.cu  test_psd2.cpp  test_psd2.cu
scripts/: bigint_help.py  find_leaf_index.py  hash_bhp256_parse.py  keccak.py  sha3_unroll.py  unroll.py
src/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  Solution.cu  cu_macro.h  cuinterface.rs  lib.rs
src/cuda/: CudaAleoAlgo.cu  CudaAleoAlgo.cuh  bls12_377.cuh  cu_aleo_globals.cu  cu_aleo_globals.cuh  cu_aleo_interface.cu  cu_aleo_interface.h  cu_bigint.cu  cu_bigint.cuh  cu_bigint_define.cuh  cu_chacha20rng.cu  cu_chacha20rng.cuh  cu_common.h  cu_keccak_v2.cuh  cu_merkle_tree.cuh  cu_mtree_define.cuh  cu_mtree_leaf.cuh  cu_mtree_public_hash.cu  cu_mtree_public_hash.cuh  cu_program.cu  cu_program.cuh  cu_qbigint.cuh  cu_sha256.cu  cu_sha256.cuh  cu_smem.cuh  cu_solution.cu  cu_solution.cuh  cu_synthesis.cuh  cu_synthesis_reg.cuh  cu_utils.cu  cu_utils.cuh
src/cuda/circuit/: circuit.cuh  circuit_common.h  circuit_exec.cuh  circuit_type.cuh
src/cuda/circuit/boolean/: circuit_bool.cuh
src/cuda/circuit/field/: circuit_field.cuh  circuit_field_base.cuh
src/cuda/circuit/groups/: circuit_groups.cuh
src/cuda/circuit/hash/: bhp256.cuh  circuit_hash_help.cuh  hash_bhp256_bases.cu  hash_bhp256_bases.cuh  ped64.cuh  ped64_base.cu  ped64_base.cuh  poseidon.cuh  poseidon_data.cu  poseidon_data.cuh
src/cuda/circuit/integer/: circuit_integer.cuh  circuit_integer_help.cuh
src/libaleocore/: AleoProve.h  Miner.cpp  Miner.h  aleo_macro.h
src/libdevcore/: AleoCallBack.cpp  AleoCallBack.h  ChaChaCommon.h  Common.h  CommonData.cpp  CommonData.h  Farmer.cpp  Farmer.h  Guards.h  Log.cpp  Log.h  MinerContext.cpp  MinerContext.h  Worker.cpp  Worker.h
src/rs_tests/: mod.rs  test_bigint.rs  test_chacha.rs  test_keccak.rs  test_merkle.rs  test_sha256.rs  test_solution.rs  test_synthesis.rs
test_lib/: CMakeLists.txt  test_data.h  test_dump_program.cu  test_simple.cpp  test_simple1.cu
tests/: CMakeLists.txt  bigint_class.h  bigint_function_definitions.h  test_farm.cpp
